welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value ||
	if (aSmile && bSmile) || ((!aSmile) && (!bSmile)) { true }
                              ^